force-app/main/default/objects/Contract/fields/A_E_or_Sears__c.field-meta.xml
<CustomField>
    <fullName>A_E_or_Sears__c</fullName>
    <formula>TEXT( BRD__r.A_E_or_Sears__c )</formula>
    <label>A&amp;E or Sears</label>
    <type>Text</type>
</CustomField>