force-app/main/default/objects/Contract/fields/Aging_Order__c.field-meta.xml
<CustomField>
    <fullName>Aging_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Compliance with Applicable Law &amp; Service Section</inlineHelpText>
    <label>Aging Order</label>
    <type>Checkbox</type>
</CustomField>