force-app/main/default/objects/Contract/fields/Amendment__c.field-meta.xml
<CustomField>
    <fullName>Amendment__c</fullName>
    <description>Which Amendment number is this contract on?</description>
    <inlineHelpText>Which Amendment number is this contract on?</inlineHelpText>
    <label>Amendment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>