force-app/main/default/objects/Contract/fields/Approval_Age__c.field-meta.xml
<CustomField>
    <fullName>Approval_Age__c</fullName>
    <formula>Approval_Date__c - Contract_Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>