force-app/main/default/objects/Contract/fields/Approval_Age_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Approval_Age_Salesforce__c</fullName>
    <formula>Approval_Date_Salesforce__c - Approval_Assigned_Date_Salesforce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Age (Salesforce)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>