force-app/main/default/objects/Contract/fields/Approval_Aging__c.field-meta.xml
<CustomField>
    <fullName>Approval_Aging__c</fullName>
    <formula>IF(OR( 
ISPICKVAL( Approval_Status_Salesforce__c, &quot;Pending NCM&quot;),  
ISPICKVAL( Approval_Status_Salesforce__c , &quot;Pending Internal&quot;)), 
(NOW () -  Contract_Submission_Date__c ), null)</formula>
    <label>Approval Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>