force-app/main/default/objects/Contract/fields/Approval_Assigned_Date_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Approval_Assigned_Date_Salesforce__c</fullName>
    <description>Date that Salesforce approval was sent to the Sears Executive Team</description>
    <inlineHelpText>Date that Salesforce approval was sent to the Sears Executive Team</inlineHelpText>
    <label>Approval Assigned Date (Salesforce)</label>
    <type>DateTime</type>
</CustomField>