force-app/main/default/objects/Contract/fields/Approval_Date_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_DocuSign__c</fullName>
    <description>Capacity/Routing, Carry-In, Legal, NCC, Parts</description>
    <formula>DocuSign_Envelope_Sears_Team_Approval__r.dsfs__Completed_Date_Time__c</formula>
    <label>Approval Date (DocuSign)</label>
    <type>DateTime</type>
</CustomField>