force-app/main/default/objects/Contract/fields/Approval_Date_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_Salesforce__c</fullName>
    <description>Business Integration, Channel Operations, Client Support, In-Home Operations, Sales</description>
    <label>Approval Date (Salesforce)</label>
    <type>DateTime</type>
</CustomField>