force-app/main/default/objects/Contract/fields/Approval_Status_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_DocuSign__c</fullName>
    <description>Capacity/Routing, Carry-In, Legal, NCC, Parts</description>
    <formula>DocuSign_Envelope_Sears_Team_Approval__r.dsfs__Envelope_Status__c</formula>
    <inlineHelpText>Capacity/Routing, Carry-In, Legal, NCC, Parts</inlineHelpText>
    <label>Approval Status (DocuSign)</label>
    <type>Text</type>
</CustomField>