force-app/main/default/objects/Contract/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Sys admin to trigger field updates and automated processes. Does not need to be on the layout.</description>
    <label>Audit</label>
    <type>Checkbox</type>
</CustomField>