force-app/main/default/objects/Contract/fields/Authorization_Amount__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Amount__c</fullName>
    <label>Authorization Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>