force-app/main/default/objects/Contract/fields/Authorization_Limit__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pricing Exhibit (Note:  $250.00 is the minimum)</inlineHelpText>
    <label>Authorization Limit</label>
    <type>Checkbox</type>
</CustomField>