force-app/main/default/objects/Contract/fields/Auto_Renewal_Clause__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Clause__c</fullName>
    <label>Auto-Renewal Clause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>