force-app/main/default/objects/Contract/fields/Average_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Value__c</fullName>
    <formula>IF(Release_Orders__c&gt;0, Cumulated_Release_Value__c /  Release_Orders__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>