force-app/main/default/objects/Contract/fields/Bid_Register__c.field-meta.xml
<CustomField>
    <fullName>Bid_Register__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Register</label>
    <type>Checkbox</type>
</CustomField>