force-app/main/default/objects/Contract/fields/Bill_Back_Chargeback__c.field-meta.xml
<CustomField>
    <fullName>Bill_Back_Chargeback__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Servicer Charges Section</inlineHelpText>
    <label>Bill Back / Chargeback</label>
    <type>Checkbox</type>
</CustomField>