force-app/main/default/objects/Contract/fields/BRD__c.field-meta.xml
<CustomField>
    <fullName>BRD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BRD</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Contract must be related to the same Opportunity as the related BRD.</errorMessage>
        <filterItems>
            <field>Home_Services_BRD_Process__c.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Home_Services_BRD_Process__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>