force-app/main/default/objects/Contract/fields/BRD_Status__c.field-meta.xml
<CustomField>
    <fullName>BRD_Status__c</fullName>
    <formula>TEXT( BRD__r.Approval_Status__c )</formula>
    <label>BRD Status</label>
    <type>Text</type>
</CustomField>