force-app/main/default/objects/Contract/fields/Call_Center_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Requirements__c</fullName>
    <label>Call Center Requirements</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>