force-app/main/default/objects/Contract/fields/CAPCON_Approved__c.field-meta.xml
<CustomField>
    <fullName>CAPCON_Approved__c</fullName>
    <formula>Opportunity__r.CAPCON_Approved__c</formula>
    <label>CAPCON Approved</label>
    <type>Checkbox</type>
</CustomField>