force-app/main/default/objects/Contract/fields/CAPCON_Required__c.field-meta.xml
<CustomField>
    <fullName>CAPCON_Required__c</fullName>
    <formula>TEXT(Opportunity__r.CAPCON_Required__c)</formula>
    <label>CAPCON Required</label>
    <type>Text</type>
</CustomField>