force-app/main/default/objects/Contract/fields/Citi_or_Recourse__c.field-meta.xml
<CustomField>
    <fullName>Citi_or_Recourse__c</fullName>
    <label>Citi or Recourse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Citi</fullName>
            </value>
            <value>
                <fullName>Recourse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>