force-app/main/default/objects/Contract/fields/Client_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Legal_Name__c</fullName>
    <label>Client Legal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>