force-app/main/default/objects/Contract/fields/Completed_Age_Customer_eSignature__c.field-meta.xml
<CustomField>
    <fullName>Completed_Age_Customer_eSignature__c</fullName>
    <formula>DocuSign_Envelope_Customer_eSignature__r.dsfs__Completed_Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Age (Customer eSignature)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>