force-app/main/default/objects/Contract/fields/Completed_Date_Customer_eSignature__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_Customer_eSignature__c</fullName>
    <description>Customer, NCM, Sales</description>
    <formula>DocuSign_Envelope_Customer_eSignature__r.dsfs__Completed_Date_Time__c</formula>
    <inlineHelpText>Customer, NCM, Sales</inlineHelpText>
    <label>Completed Date (Customer eSignature)</label>
    <type>DateTime</type>
</CustomField>