force-app/main/default/objects/Contract/fields/Contract_Admin_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Admin_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Admin Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>