force-app/main/default/objects/Contract/fields/Contract_Administration_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Administration_Status__c</fullName>
    <label>Contract Administration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Pending NCM Review</fullName>
            </value>
            <value>
                <fullName>Pending Operational Review</fullName>
            </value>
            <value>
                <fullName>Pending Legal Review</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Pending Director Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Open (O)</fullName>
            </value>
            <value>
                <fullName>Future (F)</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Incomplete (ID) (1)</fullName>
            </value>
            <value>
                <fullName>Incomplete (IC) (2)</fullName>
            </value>
            <value>
                <fullName>Declined (D)</fullName>
            </value>
            <value>
                <fullName>Approved But Incomplete (AI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>