force-app/main/default/objects/Contract/fields/Contract_End_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_2__c</fullName>
    <formula>Contract_End_Date__c</formula>
    <label>Contract End Date 2</label>
    <type>Date</type>
</CustomField>