force-app/main/default/objects/Contract/fields/Contract_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Contract_Next_Steps__c</fullName>
    <label>Contract Next Steps</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>