force-app/main/default/objects/Contract/fields/Contract_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Submission_Date__c</fullName>
    <description>Date submitted to NCM. Will update with most recent time it was submitted.</description>
    <label>Contract Submission Date</label>
    <type>DateTime</type>
</CustomField>