force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <inlineHelpText>Most Sears Commercial Contracts will be &quot;Product&quot; contracts, but some will be contractual agreements for &quot;Rebates&quot;.  Most Home Services / A&amp;E contracts will be &quot;Service&quot; contracts.</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Rebates</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>