force-app/main/default/objects/Contract/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <description>Used for attaching signed DocuSign document</description>
    <formula>Id</formula>
    <label>ContractId</label>
    <type>Text</type>
</CustomField>