force-app/main/default/objects/Contract/fields/Contractors__c.field-meta.xml
<CustomField>
    <fullName>Contractors__c</fullName>
    <inlineHelpText>Can contractors be used, or must they be Sears/A&amp;E branded?</inlineHelpText>
    <label>Contractors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>