force-app/main/default/objects/Contract/fields/Cumulated_Release_Value__c.field-meta.xml
<CustomField>
    <fullName>Cumulated_Release_Value__c</fullName>
    <label>Cumulated Release Value</label>
    <summarizedField>Contract_Line_Item__c.Amount_Processed__c</summarizedField>
    <summaryForeignKey>Contract_Line_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>