force-app/main/default/objects/Contract/fields/Customer_Signed_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_By_Email__c</fullName>
    <description>Used for DocuSign (Send to Customer)</description>
    <formula>CustomerSigned.Email</formula>
    <label>Customer Signed By - Email</label>
    <type>Text</type>
</CustomField>