force-app/main/default/objects/Contract/fields/Customer_Signed_By_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_By_Last_Name__c</fullName>
    <description>Used for DocuSign (Send to Customer)</description>
    <formula>CustomerSigned.LastName</formula>
    <label>Customer Signed By - Last Name</label>
    <type>Text</type>
</CustomField>