force-app/main/default/objects/Contract/fields/Date_of_Citi_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Citi_Approval__c</fullName>
    <label>Date of Citi Approval</label>
    <type>Date</type>
</CustomField>