force-app/main/default/objects/Contract/fields/Date_of_Recourse_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Recourse_Approval__c</fullName>
    <label>Date of Recourse Approval</label>
    <type>Date</type>
</CustomField>