force-app/main/default/objects/Contract/fields/Date_of_Risk_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Risk_Review__c</fullName>
    <label>Date of Risk Review</label>
    <type>Date</type>
</CustomField>