force-app/main/default/objects/Contract/fields/Date_of_Under_Writing_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Under_Writing_Approval__c</fullName>
    <label>Date of Under Writing Approval</label>
    <type>Date</type>
</CustomField>