force-app/main/default/objects/Contract/fields/Day_Termination_Clause__c.field-meta.xml
<CustomField>
    <fullName>Day_Termination_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Term Section 30 is standard (Could see 60 or 90 Day).</inlineHelpText>
    <label>Termination Clause</label>
    <type>Checkbox</type>
</CustomField>