force-app/main/default/objects/Contract/fields/DM__c.field-meta.xml
<CustomField>
    <fullName>DM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is populated with the account owner&#39;s Manager</inlineHelpText>
    <label>District Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>