force-app/main/default/objects/Contract/fields/DocuSign_Envelope_Customer_eSignature__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_Customer_eSignature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link the DocuSign envelope sent out for Customer eSignature</description>
    <inlineHelpText>Please indicate which DocuSign envelope corresponds to the document sent out for Customer eSignature</inlineHelpText>
    <label>DocuSign Envelope - Customer eSignature</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>Contracts (Customer eSignature)</relationshipLabel>
    <relationshipName>Contracts_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>