force-app/main/default/objects/Contract/fields/DocuSign_Envelope_Sears_Team_Approval__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_Sears_Team_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link the DocuSign envelope sent out for Sears Team approval</description>
    <inlineHelpText>Please indicate which DocuSign envelope corresponds to the document sent for Sears Team for approval</inlineHelpText>
    <label>DocuSign Envelope - Sears Team Approval</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>Contracts (Sears Team Approval)</relationshipLabel>
    <relationshipName>Contracts_Sears</relationshipName>
    <type>Lookup</type>
</CustomField>