force-app/main/default/objects/Contract/fields/DocuSign_eSignature_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_eSignature_Status__c</fullName>
    <formula>DocuSign_Envelope_Customer_eSignature__r.dsfs__Envelope_Status__c</formula>
    <label>DocuSign eSignature Status</label>
    <type>Text</type>
</CustomField>