force-app/main/default/objects/Contract/fields/ECM_Done__c.field-meta.xml
<CustomField>
    <fullName>ECM_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECM Done</label>
    <type>Checkbox</type>
</CustomField>