force-app/main/default/objects/Contract/fields/ECM_ID__c.field-meta.xml
<CustomField>
    <fullName>ECM_ID__c</fullName>
    <label>ECM ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>