force-app/main/default/objects/Contract/fields/Emergency_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Labor_Rate__c</fullName>
    <label>Emergency Labor Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>