force-app/main/default/objects/Contract/fields/Exp_Gross_Value__c.field-meta.xml
<CustomField>
    <fullName>Exp_Gross_Value__c</fullName>
    <formula>Exp_Net_Value__c +  Exp_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exp. Gross Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>