force-app/main/default/objects/Contract/fields/Exp_Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Exp_Net_Value__c</fullName>
    <label>Exp. Net Value</label>
    <summarizedField>Contract_Line_Item__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Contract_Line_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>