force-app/main/default/objects/Contract/fields/Exp_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Exp_Tax_Amount__c</fullName>
    <formula>SBQQ__Quote__r.Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exp. Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>