force-app/main/default/objects/Contract/fields/Extension_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_End_Date__c</fullName>
    <label>Extension End Date</label>
    <type>Date</type>
</CustomField>