force-app/main/default/objects/Contract/fields/Fuel_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge__c</fullName>
    <inlineHelpText>If &#39;Per Claim&#39; please fill out the Fuel Surcharge Limit</inlineHelpText>
    <label>Fuel Surcharge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Per Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>