force-app/main/default/objects/Contract/fields/Fuel_Surcharge_Limit__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge_Limit__c</fullName>
    <inlineHelpText>If Fuel Surcharge is &#39;Per Claim&#39; please enter the limit</inlineHelpText>
    <label>Fuel Surcharge Limit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>