force-app/main/default/objects/Contract/fields/Key_Price_Change_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Key_Price_Change_Indicator__c</fullName>
    <label>Key Price Change Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multi-Year Term</fullName>
            </value>
            <value>
                <fullName>Volume Incentive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>