force-app/main/default/objects/Contract/fields/Last_Release_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Release_Order_Date__c</fullName>
    <label>Last Release Order Date</label>
    <summarizedField>Contract_Line_Item__c.Requested_Delivery_Date__c</summarizedField>
    <summaryForeignKey>Contract_Line_Item__c.Contract__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>