force-app/main/default/objects/Contract/fields/Late_Payment__c.field-meta.xml
<CustomField>
    <fullName>Late_Payment__c</fullName>
    <label>Late Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.5%</fullName>
                <default>true</default>
                <label>1.5%</label>
            </value>
            <value>
                <fullName>1.0%</fullName>
            </value>
            <value>
                <fullName>2.0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>