force-app/main/default/objects/Contract/fields/Latest_Web_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Latest_Web_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Web Forecast</label>
    <referenceTo>Web_Forecast__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>