force-app/main/default/objects/Contract/fields/Legal_Approver__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LegalContract</relationshipName>
    <type>Lookup</type>
</CustomField>