force-app/main/default/objects/Contract/fields/Legal_Council__c.field-meta.xml
<CustomField>
    <fullName>Legal_Council__c</fullName>
    <label>Legal Council</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mike Mitchell</fullName>
            </value>
            <value>
                <fullName>Tom Shanahan</fullName>
            </value>
            <value>
                <fullName>Donna Carollo</fullName>
            </value>
            <value>
                <fullName>Ted Koerth</fullName>
            </value>
            <value>
                <fullName>Brian Bichkoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>