force-app/main/default/objects/Contract/fields/Local_Parts_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Local_Parts_Pricing__c</fullName>
    <label>Local Parts Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cost + 10%</fullName>
            </value>
            <value>
                <fullName>Cost + 15%</fullName>
            </value>
            <value>
                <fullName>Cost + 18%</fullName>
            </value>
            <value>
                <fullName>Cost + 20%</fullName>
            </value>
            <value>
                <fullName>Cost + 25%</fullName>
            </value>
            <value>
                <fullName>Cost + 30%</fullName>
            </value>
            <value>
                <fullName>Cost + 35%</fullName>
            </value>
            <value>
                <fullName>Cost + 40%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>