force-app/main/default/objects/Contract/fields/NCC_Payment_including_Late_Fee_s__c.field-meta.xml
<CustomField>
    <fullName>NCC_Payment_including_Late_Fee_s__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Servicer Charges Section:  Include&#39;s Late Fees</inlineHelpText>
    <label>NCC Payment (including Late Fee&#39;s)</label>
    <type>Checkbox</type>
</CustomField>