force-app/main/default/objects/Contract/fields/Non_OEM_or_Rebuilt_Parts__c.field-meta.xml
<CustomField>
    <fullName>Non_OEM_or_Rebuilt_Parts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Servicer Responsibilities Section</inlineHelpText>
    <label>Non-OEM or Rebuilt Parts</label>
    <type>Checkbox</type>
</CustomField>