force-app/main/default/objects/Contract/fields/Non_OEM_Parts__c.field-meta.xml
<CustomField>
    <fullName>Non_OEM_Parts__c</fullName>
    <inlineHelpText>Can Non-OEM Parts be used?</inlineHelpText>
    <label>Non-OEM Parts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>