force-app/main/default/objects/Contract/fields/Note_on_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Note_on_Renewal__c</fullName>
    <label>Note on Renewal</label>
    <type>TextArea</type>
</CustomField>